%% EVerest manager — ManagerState lifecycle state machine
%% Narrative: lib/everest/framework/docs/ManagerLifecycle.md
%% ManagerState enum: lib/everest/framework/src/manager_module_status.hpp
%% Transitions / timeouts: lib/everest/framework/src/manager.cpp

stateDiagram-v2
    direction TB

    state "Startup" as G_BOOT {
        [*] --> Idle : construct
        Idle --> Initializing : run()
        Initializing --> StartingModules : handle_start_modules(): metadata publish,\nMQTT ready handlers, spawn
        StartingModules --> Running : all non-ignored modules ready\n(skip if shutdown already started)
    }

    state "Shutdown / drain" as G_DRAIN {
        ShutdownRequested --> ForceTerminating : drain deadline exceeded\n(SHUTDOWN_TIMEOUT_MS with --graceful-shutdown,\nimmediate otherwise)
        CrashShutdownInProgress --> ForceTerminating : drain deadline exceeded\n(SHUTDOWN_TIMEOUT_MS with --graceful-shutdown,\nimmediate otherwise)
        RestartRequested --> ForceTerminating : drain deadline exceeded\n(SHUTDOWN_TIMEOUT_MS with --graceful-shutdown,\nimmediate otherwise)
        ShutdownRequested --> CrashShutdownInProgress : crash path\n(immediate after MQTT shutdown)
        CrashShutdownInProgress --> ShutdownRequested : first SIGINT/SIGTERM during drain\n(ShutdownCause Crash is kept)
        RestartRequested --> ShutdownRequested : first SIGINT/SIGTERM during drain\n(ShutdownCause Restart downgraded to Normal)
    }

    state "Finalize" as G_END {
        ShutdownFinalizing --> Exiting : SIGINT shutdown finish\n(cleanup, EXIT_SUCCESS)
        Exiting --> [*] : process exit
    }

    %% Cross-region: signals and IPC while starting or running
    Running --> ShutdownRequested : first SIGINT/SIGTERM,\nShutdownCause Normal,\nMQTT shutdown published\n(--graceful-shutdown only)
    StartingModules --> ShutdownRequested : first SIGINT/SIGTERM,\nShutdownCause Normal

    Running --> CrashShutdownInProgress : unexpected module exit,\nShutdownCause Crash
    StartingModules --> CrashShutdownInProgress : unexpected module exit,\nShutdownCause Crash

    Running --> RestartRequested : IPC restart_modules,\nShutdownCause Restart
    StartingModules --> RestartRequested : IPC restart_modules,\nShutdownCause Restart
    Idle --> RestartRequested : IPC restart_modules while idle,\nShutdownCause Restart, nothing to drain

    Idle --> Exiting : first SIGINT/SIGTERM, no module PIDs\n(cleanup, EXIT_SUCCESS, no drain)
    ShutdownRequested --> Exiting : second SIGINT/SIGTERM\n(sigint_received_ already true, EXIT_FAILURE)\nsame from any other drain state

    %% Drain complete → finalize (when module_handles_ is empty)
    ShutdownRequested --> ShutdownFinalizing : all module PIDs gone
    CrashShutdownInProgress --> ShutdownFinalizing : all module PIDs gone
    RestartRequested --> ShutdownFinalizing : all module PIDs gone
    ForceTerminating --> ShutdownFinalizing : all module PIDs gone

    %% Finalize outcomes
    ShutdownFinalizing --> StartingModules : reload config and start again\n(admin restart, or --recover-module-crashes\nunder max restarts and no SIGINT)
    ShutdownFinalizing --> Idle : Normal cause without SIGINT (unconditional),\nor crash cap exceeded / failed or empty reload\n(--idle-on-failure)
    ShutdownFinalizing --> Exiting : unexpected module exit, crash cap exceeded\nor failed/empty reload (default, EXIT_FAILURE)

    %% Boot-time outcome (before StartingModules)
    Initializing --> Idle : --into-idle (whatever the config is),\nor no modules (--idle-on-failure)
    Initializing --> Exiting : invalid config or no modules\n(EXIT_FAILURE, unless --into-idle)\nno-modules also idles with --idle-on-failure

    note right of Running
        Last MQTT ready while shutdown in progress: skip Running
        (and skip ALL_MODULES_STARTED / the global ready publish).
        Database bootstrap and MQTT connect failures return EXIT_FAILURE
        directly from run(), without entering Exiting.
    end note

    note right of ForceTerminating
        SIGTERM then SIGKILL after FORCE_KILL_GRACE_TIMEOUT_MS.
        ShutdownCause at finalize: Normal exit, Restart, or Crash recovery.
    end note

    classDef idle fill:#64748b,color:#f8fafc
    classDef init fill:#818cf8,color:#f8fafc
    classDef starting fill:#4f46e5,color:#f8fafc
    classDef running fill:#3730a3,color:#f8fafc
    classDef shutdownReq fill:#ca8a04,color:#f8fafc
    classDef crash fill:#ea580c,color:#f8fafc
    classDef restart fill:#c2410c,color:#f8fafc
    classDef force fill:#9a3412,color:#f8fafc
    classDef finalize fill:#047857,color:#f8fafc
    classDef exiting fill:#dc2626,color:#f8fafc

    class Idle idle
    class Initializing init
    class StartingModules starting
    class Running running
    class ShutdownRequested shutdownReq
    class CrashShutdownInProgress crash
    class RestartRequested restart
    class ForceTerminating force
    class ShutdownFinalizing finalize
    class Exiting exiting
